terceiro commit do HTML

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <label for="conta">Conta</label>
                     <div>
                         <img src="./images/icon-dollar.svg" alt="icone cifrão">
-                        <input type="number" name="conta" id="conta">
+                        <input type="number" name="conta" id="conta" placeholder="0">
                     </div>
                 </div>
 
@@ -32,19 +32,37 @@
                         <input type="button" value="15%">
                         <input type="button" value="25%">
                         <input type="button" value="50%">
-                        <input type="button" name="outra" id="outra">
+                        <input type="button" name="outra" id="outra" placeholder="Outra">
 
                         <div class="pessoas">
                             <label for="conta">Pessoas</label>
                             <p>Não pode ser 0</p>
                             <div>
                                 <img src="./images/icon-person.svg" alt="icone pessoas">
-                                <input type="number" name="conta" id="conta">
+                                <input type="number" name="pessoas" id="pessoas" placeholder="0">
                             </div>
                         </div>
                     </div>
                 </div>
             </form>
+        </section>
+
+        <section class="resultados">
+            <div class="gorjeta">
+                <p>
+                    <strong>Gorjeta</strong> <br>
+                    /pessoa
+                </p>
+
+                <strong>$ 0.00</strong>
+            </div>
+
+            <div class="total">
+                <strong>Total</strong> <br>
+                /pessoa
+            </div>
+
+            <strong>$0.00</strong>
         </section>
     </main>
 </body>
