primeiro commit do css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>|Calculadora de gorjeta</title>
 </head>
 
@@ -35,7 +36,7 @@
                         <input type="button" name="outra" id="outra" placeholder="Outra">
 
                         <div class="pessoas">
-                            <label for="conta">Pessoas</label>
+                            <label for="conta">Quantidade de pessoas</label>
                             <p>Não pode ser 0</p>
                             <div>
                                 <img src="./images/icon-person.svg" alt="icone pessoas">
