quarto commit do css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="pessoas">
                     <label for="conta">Quantidade de pessoas</label>
-                    <p>Não pode ser 0</p>
+                    <p id="erro">Não pode ser 0</p>
                     <div>
                         <img src="./images/icon-person.svg" alt="icone pessoas">
                         <input type="number" name="pessoas" id="pessoas" placeholder="0">
