quinto commit do css

--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
             </div>
 
             <div class="total">
-                <strong>Total</strong> <br>
-                /pessoa
+                <p><strong>Total</strong> <br>
+                    /pessoa
+                </p>
+
+                <strong>$ 0.00</strong>
             </div>
 
-            <strong>$0.00</strong>
         </section>
     </main>
 </body>
