quarto commit do HTML e sexto commit do CSS

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                 <strong>$ 0.00</strong>
             </div>
-
+            <button>Limpar</button>
         </section>
     </main>
 </body>
