--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="informacoes">
             <form action="">
                 <div class="conta">
-                    <label for="conta">Conta</strong></label>
+                    <label for="conta">Conta</label>
                     <div>
                         <img src="./images/icon-dollar.svg" alt="icone cifrão">
                         <input type="number" name="conta" id="conta" placeholder="0">
@@ -37,24 +37,22 @@
                         <input type="button" value="15%">
                         <input type="button" value="25%">
                         <input type="button" value="50%">
-                        <input type="text" name="outra" id="outra" placeholder="Outra">
+                        <input type="number" name="outra" id="outra" placeholder="Outra">
                     </div>
                 </div>
                 <div class="pessoas">
-                    <label for="conta">Quantidade de pessoas</label>
+                    <label for="pessoas">Quantidade de pessoas</label>
                     <p id="erro">Não pode ser 0</p>
                     <div>
                         <img src="./images/icon-person.svg" alt="icone pessoas">
                         <input type="number" name="pessoas" id="pessoas" placeholder="0">
                     </div>
                 </div>
-
-
             </form>
         </section>
 
         <section class="resultados">
-            <div class="gorjeta">
+            <div class="gorjeta-total">
                 <p>
                     <strong>Gorjeta</strong> <br>
                     /pessoa
@@ -64,7 +62,8 @@
             </div>
 
             <div class="total">
-                <p><strong>Total</strong> <br>
+                <p>
+                    <strong>Total</strong> <br>
                     /pessoa
                 </p>
 
