--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
                     </div>
                 </div>
 
-                <div class="pessoas"><label for="pessoas">Pessoas</label>
-                    <p id="erro">Não pode ser zero</p>
-                    <div>
+                <div class="pessoas">
+                    <div class="textos">
+                        <label for="pessoas">Pessoas</label>
+                        <p id="erro">Não pode ser zero</p>
+                    </div>
+                    <div class="input-box" id="erro-div">
                         <img src="./images/icon-person.svg" alt="pessoa">
-                        <input type="number" name="pessoas" id="pessoas" placeholder="0">
+                        <input  type="number" name="pessoas" id="pessoas" placeholder="0">
                     </div>
                 </div>
             </form>
