nono commit do html e terceiro commit do js

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     <label for="outra">Selecione a gorjeta</label>
                     <div>
                         <input type="button" value="5%">
-                        <input type="button" value="10%">
+                        <input type="button" value="10%" >
                         <input type="button" value="15%">
-                        <input type="button" value="25%">
+                        <input type="button" value="25">
                         <input type="button" value="50%">
                         <input type="number" value="outra" id="outra" placeholder="Outra">
                     </div>
