--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="./script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
+            <script src="./script.js" defer></script>
     <title>Calculadora de gorjeta</title>
 </head>
 
 <body>
     <header>
-        <img src="./images/logo.svg" alt="">
+        <img src="./images/logo.svg" alt="logo splitter">
     </header>
 
     <main>
@@ -43,10 +43,11 @@
 
                 <div class="pessoas">
                     <div class="textos">
-                        <label for="pessoas">Pessoas</label>
+                        <label for="pessoas">Quantidade de pessoas</label>
                         <p id="erro">Não pode ser zero</p>
                     </div>
-                    <div class="input-box" id="erro-div">
+
+                    <div class="input-box">
                         <img src="./images/icon-person.svg" alt="pessoa">
                         <input  type="number" name="pessoas" id="pessoas" placeholder="0">
                     </div>
